[package]
name = "invoke"
version = "0.1.0"
authors = ["Eric Butler <idealeric@gmail.com>", "Noah Durell <noah.durell@gmail.com>"]
edition = "2018"
license = "MIT"
autotests = false

[[test]]
name = "e2e"
path = "src/test_e2e/mod.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
assert_cmd = "1.0"
assert_fs = "1.0"